--- a/D2-passwall.config
+++ b/D2-passwall.config
@@ -6670,7 +6670,7 @@ CONFIG_PACKAGE_nlbwmon=y
 # CONFIG_PACKAGE_obfs4proxy is not set
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-CONFIG_PACKAGE_odhcpd=y
+CONFIG_PACKAGE_odhcpd=n
 
 #
 # Configuration
